Bug 119447 - Start Module - "Create" section on left is not scrollable on smaller devices such as netbooks.
Summary: Start Module - "Create" section on left is not scrollable on smaller devices ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.2.1.1 release
Hardware: x86 (IA32) All
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:7.4.0 target:7.3.5
Keywords: difficultyBeginner, easyHack, implementationError
: 120320 131054 145650 (view as bug list)
Depends on:
Blocks: Start-Center
  Show dependency treegraph
 
Reported: 2018-08-23 11:38 UTC by nashidar
Modified: 2022-07-31 22:41 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Start Centre Screen Issue (75.68 KB, image/jpeg)
2018-10-10 08:52 UTC, nashidar
Details
Version Information (46.68 KB, image/jpeg)
2018-10-10 08:53 UTC, nashidar
Details
Start Centre Screen Issue (90.12 KB, image/jpeg)
2018-10-10 08:59 UTC, nashidar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nashidar 2018-08-23 11:38:10 UTC
Description:
When you open LibreOffice from the shortcut on the desktop in Windows 10 on a Netbook sized device - the area on the left of the screen shown as "Create" cannot be scrolled so there are applications that aren't visible and cannot be made visible.

Steps to Reproduce:
1.From Windows 10 Open Libre Office using the desktop shortcut.
2.On the left hand side of the Start Module look at the "Create" section at the bottom.
3.Cannot see any applications beyond "Math Formula" as the section cannot be scrolled. The "Help" and "Extensions" menu items can be seen and just cover the bottom of the "Math Formula" application link.

Actual Results:
Cannot see all available applications.

Expected Results:
Allow me to scroll that section to see all the applications available.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: StartModule
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 V Stuart Foote 2018-08-23 12:37:21 UTC
Are OS display settings set other than 100%?

Unlikely any current netbook has screen resolution less than 768 px, sounds more like a theming issue on Windows 10, also suggest test with alternate icons, e.g. Sifr rather than default Colibre/Breeze.
Comment 2 V Stuart Foote 2018-08-23 12:41:49 UTC
Making the Start Center launchers bar scrollable is not an appealing proposition, rather it should fit correctly at our minimum supported vertical screen size of 768px.  Screens less than that are simply not supported via the Start Center--and LO modules need to be launched directly.
Comment 3 quast 2018-10-04 16:54:10 UTC
same problem with xubuntu 18.04 x86 netbooks. Startcenter exceeds 16:7 screen and unsizeable. Modules started from there inherit this behaviour. LO-files started dirctly from filebrowser are fitted correctly inside screenborders.
Comment 4 nashidar 2018-10-10 08:50:18 UTC
(In reply to V Stuart Foote from comment #1)
> Are OS display settings set other than 100%?
> 
> Unlikely any current netbook has screen resolution less than 768 px, sounds
> more like a theming issue on Windows 10, also suggest test with alternate
> icons, e.g. Sifr rather than default Colibre/Breeze.

The OS display setting is set to 100%.

My netbook is a Samsung NC210-A03AU netbook with a display which I bought back in 2011 with Windows 7 Starter. Still qualified for the Windows 10 upgrade.

Screen resolution is 1024 x 600.
Comment 5 nashidar 2018-10-10 08:52:20 UTC
Created attachment 145551 [details]
Start Centre Screen Issue

A screenshot of what the Start Centre looks like on my netbook.
Comment 6 nashidar 2018-10-10 08:53:20 UTC
Created attachment 145552 [details]
Version Information

Version Information from the Libre Office -> About screen.
Comment 7 nashidar 2018-10-10 08:59:07 UTC
Created attachment 145553 [details]
Start Centre Screen Issue

A screenshot of what the Start Centre looks like on my netbook.
Comment 8 V Stuart Foote 2018-10-10 12:56:37 UTC
Work on bug 68526 for minimum height including elements on the tab bar does not fit a  screen size less than 768px. While 1024x768 is our official minimum size, as here and in other reports it is not that common to find current netbooks running current OS and DE with less than  768px vertical.

Issues with Start Center vertical size (running individual modules are not affected) could be handled with addition of scroll bar to the Start Center's tab bar, or possibly by shifting to smaller ODF icons and labeling when vertical size drops below 768?
Comment 9 V Stuart Foote 2018-10-10 12:57:35 UTC
*** Bug 120320 has been marked as a duplicate of this bug. ***
Comment 10 V Stuart Foote 2018-10-10 12:59:01 UTC
(In reply to V Stuart Foote from comment #8)

s/common/uncommon/
Comment 11 V Stuart Foote 2018-10-10 16:31:08 UTC
(In reply to V Stuart Foote from comment #8)
> Work on bug 68526 for minimum height

Oops that was bug 65826 as in the see also...
Comment 12 Heiko Tietze 2018-10-11 15:43:36 UTC
We could also reduce the font size/button height a little bit.
Comment 13 Heiko Tietze 2018-10-28 13:02:03 UTC
Removing needsUX. Likely a simple easyhack.
Comment 14 Xisco Faulí 2020-06-17 11:06:42 UTC
*** Bug 131054 has been marked as a duplicate of this bug. ***
Comment 15 Heiko Tietze 2022-05-24 11:51:01 UTC
Submitted patch https://gerrit.libreoffice.org/c/core/+/134867 changing the font size multiplier from 1.4 to 1.2. Since the branding image wasn't included in the minimum height calculation (resulting in hidden buttons at the footer; also fixed in the patch) the resulting height is not much less. But it's anyway less than 768px, approx. 710px with kf5.
Comment 16 Commit Notification 2022-05-25 08:04:55 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ed45b67db66ef0f6c69887c75013a178c4412f74

Resolves tdf#119447 - Improve sidebar height in start center

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2022-05-27 06:09:17 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/f3b93f48ee65273cfee63e54f831c199110a20b7

Resolves tdf#119447 - Improve sidebar height in start center

It will be available in 7.3.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Matt K 2022-07-31 22:41:47 UTC
*** Bug 145650 has been marked as a duplicate of this bug. ***