Resolves tdf#119447 - Improve sidebar height in start center

Reduced the font size multiplier from 1.4 to 1.2 to fit
the window into 768px height and added the branding image to
the height calculation

Change-Id: I05473155f0068880298a461fe8491468b07079b6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134867
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
(cherry picked from commit ed45b67db66ef0f6c69887c75013a178c4412f74)